Configurable remote control preview FPS.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -54432,6 +54432,9 @@
         }
       }
     },
+    "Preview FPS" : {
+
+    },
     "Privacy policy" : {
       "localizations" : {
         "de" : {
